--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Primary Meta Tags -->
-  <title>LOURENÇO MONJANE| DESEMVOLVEDOR DE SOFTWARE</title>
+  <title>LOURENÇO MONJANE| DESENVOLVEDOR DE SOFTWARE</title>
   <meta name="title" content="LOURENÇO MONJANE| DESEMVOLVEDOR DE SOFTWARE">
   <meta name="description"
     content="Desenvolvedor de Software com experiência em Java, Spring Boot, Node.js, React.js, React Native & Express.">
@@ -15,7 +15,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="LOURENÇO MONJANE| DESEMVOLVEDOR DE SOFTWARE">
+  <meta property="og:title" content="LOURENÇO MONJANE| DESENVOLVEDOR DE SOFTWARE">
   <meta property="og:description"
     content="Desenvolvedor de Software com experiência em Java, Spring Boot, Node.js, React.js, React Native & Express.">
 
